--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +9,6 @@
     <link rel="shortcut icon" href="img/identidade/gsesolucoeslogo.png" type="image/x-icon">
 
 </head>
-
 <body>
     <header>
         <div class="container">
@@ -67,14 +65,6 @@
 
     <section id="produtos">
         <iframe src="views/produto.html" scrolling="no"  frameborder="0"></iframe>
-        <!-- <div class="container-produtos">
-            <h3>Produtos</h3>
-            <a href="../produtos.html" class="btn button">Confira Nossos Produtos</a>
-            <input type="text" id="search-bar" placeholder="Buscar produtos..." onkeyup="searchProducts()">
-            <div class="produtos-grid" id="produtos-grid"></div>
-            <div class="pagination" id="pagination"></div>
-            <a href="../produtos.html" class="btn button">Ver Mais...</a>
-        </div> -->
     </section>
 
     <section id="sobre-gse">
@@ -99,9 +89,8 @@
         </div>
     </section>
 
-    
     <section id="contato">
-        <iframe src="views/contato.html" frameborder="0"></iframe>
+        <iframe src="views/contato.html" frameborder="0" scrolling="no"></iframe>
     </section>
 
     <footer>
@@ -119,7 +108,6 @@
             <button class="next" onclick="changeImage(1)">&#10095;</button>
         </div>
     </div>
-
 
 <script src="js/index.js"></script>
 </body>
