--- a/admin.html
+++ b/admin.html
@@ -19,10 +19,10 @@
 
             <nav class="menu-principal">
                 <ul>
-                    <li><a href="#catalogos">Catálogos</a></li>
+                    <li><a href="index.html#catalogos">Catálogos</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="#sobre-gse">Sobre Nós</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="index.html#sobre-gse">Sobre Nós</a></li>
+                    <li><a href="index.html#contato">Contato</a></li>
                 </ul>
             </nav>
 
